# PolePositionCR

./: .gitignore  CMakeLists.txt  README.md  main.c
Client/: CMakeLists.txt  main.c
Client/Client/: Client.c  Client.h
Client/Json/: cJSON.c  cJSON.h
Client/gui/: Menu.c  Menu.h  game.c  game.h
Server/src/: main.java
Server/src/Cliente/: Client.java
Server/src/Data/: Data.java
Server/src/Data/Balas/: Balas.java
Server/src/Data/Objects/: Hueco.java  Objects.java  Objetos.java  Turbo.java  Vida.java
Server/src/Data/Players/: Player.java
Server/src/Json/: JsonAnalizador.java  JsonBuilder.java  JsonLecturaBuilder.java
Server/src/LinkedList/: LinkedList.java  Node.java
Server/src/Servidor/: Server.java
src/: main.c
src/Server/src/Cliente/: ClientThread.java
src/Server/src/Servidor/: Server.java  ServerThread.java
src/gui/: game.c
